2009-12-03  Gordon Williams <gordon.williams@collabora.co.uk>

	NB#149091 - Desktop does not respect PORTRAIT_CAPABLE flag correctly
	
	* src/main.c: Add Ctrl-Shift-R to toggle the portrait-capable flag for
	              debugging
	* src/launcher/hd-app-mgr.c
	* src/launcher/hd-app-mgr.h: Now activate accelerometer if we have any
	  windows that specify they are portrait-capable. Call 
	  hd_comp_mgr_set_portrait_if_possible if we decide we should be in 
	  portrait mode if the visible windows allow it.
	* src/mb/hd-comp-mgr.c
	* src/mb/hd-comp-mgr.h: Check if we need accelerometer every restack, 
	  and add hd_comp_mgr_may_be_portrait to see if any window objects to 
	  being in portrait. Add hd_comp_mgr_set_portrait_if_possible and
	  related code to let us know we should transition to portrait
	  if the windows allow it.	

2009-12-02  Gordon Williams <gordon.williams@collabora.co.uk>

	NB#147129 - Flickering is seen on the blured background when the task
	            button is glowing.
	            
	* src/home/hd-render-manager.c: Updated a comment, and added some more
	  useful (ifdef'd) debug code for reblurring
	* src/mb/hd-note.c: As for AnimationActors, set the DontShow flag to
	  stop the notification preview being stacked in home and causing a
	  redraw.
	* src/util/hd-transition.c: Show the notification preview properly when
	  the transition for it starts.

	NB#146526 - Observed hildon-desktop: GLIB CRITICAL
	
	* src/home/hd-home.c: Make sure we ref and unref the operator logo,
	  rather than destroying the actor. Now comp-mgr-clutter refs and
	  unrefs too, this all works as expected.

	NB#142932 - Unblurring effect can be noticed while maximizing the 
	            application from switcher
	            
	* src/home/hd-render-manager.c: Make sure that we don't reduce the
	  blurring level at all from hd_render_manager_unzoom_background

	NB#135249 - "More applications" view locked with the main icon view
	            after launched under high load 
